# Etna

./: CMakeLists.txt  README.md
examples/: basic.cpp  instanced.cpp  multi_window.cpp  rocket.cpp  shared.hpp  sun.cpp
include/etna/: engine.hpp  material.hpp
src/: default_materials.cpp  default_primitives.cpp  engine.cpp  incbin.h  material.cpp  renderer.cpp
src/shaders/: default.frag  default.vert  grid.frag
